@@ -231,7 +231,17 @@ class action_plugin_fckg_edit extends DokuWiki_Action_Plugin {
              $text
             );   
       }
-
+        /* convert indented code blocks into tagged code blocks*/
+ 
+ 
+       $text= preg_replace_callback(
+          '/(?<!<code>)(\n  )((?![\*\-]).*?)(\n)+(?!\s)<?!<\/code>/ms',
+          create_function(
+            '$matches',
+            ' return "\n<code>\n" . $matches[2] . "\n</code>\n";  '
+          ), $text
+        );   
+        
        $pos = strpos($text, '<');
 
        if($pos !== false) {
@@ -255,7 +265,7 @@ class action_plugin_fckg_edit extends DokuWiki_Action_Plugin {
                  'if(preg_match("/\w+/",$matches[2])) {
                    $matches[4] = str_replace("CHEVRONescC", ">>",$matches[4]);
                    $matches[4] = str_replace("CHEVRONescO", "<<",$matches[4]);
-                   $matches[4] = preg_replace("/<(?!\s)/ms", "__GESHI_OPEN__", $matches[4]); 
+                   $matches[4] = preg_replace("/<(?!\s)/ms", "__GESHI_OPEN__", $matches[4]);                    
                   }
                   else {
                   if( preg_match("/MULTI/",$matches[0])) {
@@ -2578,5 +2588,5 @@ if(window.DWikifnEncode && window.DWikifnEncode == 'safe') {
 
 } //end of action class
 
-
+ 
 ?>
